# okstilo

./: README.md
sandbox/hello_app/: README.md
sandbox/hello_app/config/: application.rb  credentials.yml.enc
sandbox/hello_app/config/locales/: ja.yml
sandbox/learning_python/: README.md  pyproject.toml  reading_memo.md  spam.py
sandbox/learning_python/src/: person.py
sandbox/learning_python/src/learning_python/: __init__.py
sandbox/sql_starting_from_zero/: .README.md  .gitignore  reading_memo.md
sandbox/sql_starting_from_zero/src/: list_1_6.sql  list_6-35.sql
sandbox/testing_with_pytest/: README.md  pyproject.toml
sandbox/testing_with_pytest/doc/: reading_memo.md
sandbox/testing_with_pytest/src/testing_with_pytest/: __init__.py
sandbox/zenbuiri_python/: .gitignore  README.md  pyproject.toml  reading_memo.md
sandbox/zenbuiri_python/src/zenbuiri_python/: __init__.py
sandbox/zenbuiri_python/src/zenbuiri_python/chapter05/: create_zipfile.py  print_all_in_zip.py  show_file.py
sandbox/zenbuiri_python/src/zenbuiri_python/chapter07/: json_to_csv.py  read_and_sum_csv.py  read_by_row_csv.py  read_csv.py
sandbox/zenbuiri_python/src/zenbuiri_python/chapter08/: convert_dict.py  convert_md_to_html.py  janome_analyzer.py  janome_parse.py  read_and_transform.py  read_pdf_body.py  read_pdf_outline.py  read_text.py  remove_html.py
sandbox/zenbuiri_python/src/zenbuiri_python/chapter09/: create_chart_from_csv.py  create_stacked_from_csv.py  create_stacked_percent_from_csv.py  create_xlsx.py  load_xlsx.py  random_data_add_rule.py  random_data_bar.py  read_xlsx.py
sandbox/zenbuiri_python/src/zenbuiri_python/chapter10/: get_screenshot_by_selenium.py  read_rss.py  scraping_image.py  scraping_text.py  scraping_title.py
