[project]
name = "testing-with-pytest"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "KITAGAWA Masaki", email = "kitagawa.stilo@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.4.2",
]

[tool.hatch.metadata]
allow-direct-references = true
