[project]
name = "zenbuiri-python"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "KITAGAWA Masaki", email = "kitagawa.stilo@gmail.com" }
]
dependencies = [
    "pandas>=2.0.3",
    "pdfminer.six>=20221105",
    "markdown2>=2.4.10",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
